--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,7 @@
           <div class="spacer"></div>
 
           <ul class="fancyList">
+            <div class="timeLine"></div>
             <li class="fadeIn fadeRight">
               <div class="entryHeader">
                 <p>UNIVERSITY OF DUISBURG-ESSEN</p>
@@ -114,6 +115,7 @@
           <div class="spacer"></div>
 
           <ul class="fancyList white">
+            <div class="timeLine"></div>
             <li class="fadeIn fadeRight">
               <div class="entryHeader">
                 <p>FRONT END DEVELOPMENT</p>
