--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ static_url('css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/style.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/extras.css') }}" />
@@ -249,7 +249,7 @@
           </div>
           <div class="spacer"></div>
           <div class="emailAddress">
-            bjoern@friedrichs1.de
+            <script>var e = ['bjo<!-- @Hi -->', 'ern@frie<!-- World.de -->', 'drichs1.de']; document.write(e[0] + e[1] + e[2]); </script>
           </div>
           <div class="emailText">
             No matter how you decide to contact me, I'm confident that we can come to terms on any request or concern you might have.
