--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{ static_url('css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ static_url('css/material-icons.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/style.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/extras.css') }}" />
   </head>
@@ -238,6 +239,14 @@
             <input id="formName" type="text" placeholder="">
             <input id="formEmail" type="text" placeholder="">
             <textarea id="formMsg" class="textarea" contenteditable="true" placeholder=""></textarea>
+            <div class="col-xs-12 bg-danger">
+              <span class="material-icons">warning</span>
+              <span id="warn-text">Please make sure you entered your name, your email and left a message.</span>
+            </div>
+            <div class="col-xs-12 bg-success">
+              <span class="material-icons">check_circle</span>
+              <span id="success-text">E-Mail sent successfully.</span>
+            </div>
             <div id="sendButton" contenteditable="false">Send</div>
           </div>
       </article>
