--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,35 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <link rel="stylesheet" href="{{ static_url('css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/material-icons.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/style.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/extras.css') }}" />
+    <style>
+      #headerImage {
+        background-image: url("{{ static_url('img/keyboard-compressed.jpg') }}");
+      }
+
+      #footerImage {
+        background-image: url("{{ static_url('img/keyboard-compressed.jpg') }}");
+      }
+
+      .caption {
+          background-image: url("{{ static_url('img/photo-spacer-compressed.jpg') }} ");
+      }
+
+      #contact.caption {
+          background-image: url("{{ static_url('img/mail-compressed.jpg') }}");
+      }
+
+    </style>
+    <script>
+      function decodeEmail() {
+        var e = ['bjo<!-- @Hi -->', 'ern@frie<!-- world.de -->', 'drichs1.de'];
+        document.write(e[0] + e[1] + e[2]);
+      }
+    </script>
   </head>
   <body>
     <div id="header">
@@ -34,16 +59,16 @@
         <div id="infoList">
           <ul>
             <li>
-              <span class="col-xs-12 col-sm-4">AGE</span><span id="age" class="col-xs-12 col-sm-8">20</span>
+              <span class="col-xs-12 col-sm-4 list-head">AGE</span><span id="age" class="col-xs-12 col-sm-8">20</span>
             </li>
             <li>
-              <span class="col-xs-12 col-sm-4">ADDRESS</span><span class="col-xs-12 col-sm-8">45141 Essen, Germany, Auf der Union 4a</span>
+              <span class="col-xs-12 col-sm-4 list-head">ADDRESS</span><span class="col-xs-12 col-sm-8">45141 Essen, Germany </br>Auf der Union 4a</span>
             </li>
             <li>
-              <span class="col-xs-12 col-sm-4">E-MAIL</span><span class="col-xs-12 col-sm-8">bjoern@friedrichs1.de</span>
+              <span class="col-xs-12 col-sm-4 list-head">E-MAIL</span><span class="col-xs-12 col-sm-8"><script>decodeEmail()</script></span>
             </li>
             <li>
-              <span class="col-xs-12 col-sm-4">PHONE</span><span class="col-xs-12 col-sm-8">+49 172 1853674</span>
+              <span class="col-xs-12 col-sm-4 list-head">PHONE</span><span class="col-xs-12 col-sm-8">+49 172 1853674</span>
             </li>
           </ul>
         </div>
@@ -258,7 +283,7 @@
           </div>
           <div class="spacer"></div>
           <div class="emailAddress">
-            <script>var e = ['bjo<!-- @Hi -->', 'ern@frie<!-- World.de -->', 'drichs1.de']; document.write(e[0] + e[1] + e[2]); </script>
+            <script>decodeEmail()</script>
           </div>
           <div class="emailText">
             No matter how you decide to contact me, I'm confident that we can come to terms on any request or concern you might have.
