--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="{{ static_url('css/bootstrap.min.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/material-icons.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/style.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/extras.css') }}" />
@@ -47,7 +46,7 @@
       <div id="pictureMe"></div>
     </div>
     <div id="content">
-      <article id="about" class="col-sm-offset-2 col-sm-8">
+      <article id="about" class="col-offset-2 col-8">
         <div class="welcomeBanner">WELCOME</div>
         <div class="intro">
           <span class="light">I'm</span> <span class="bold">Björn Friedrichs</span>
@@ -59,16 +58,16 @@
         <div id="infoList">
           <ul>
             <li>
-              <span class="col-xs-12 col-sm-4 list-head">AGE</span><span id="age" class="col-xs-12 col-sm-8">20</span>
+              <span class="col-mobile-12 col-4 list-head">AGE</span><span id="age" class="col-mobile-12 col-8">20</span>
             </li>
             <li>
-              <span class="col-xs-12 col-sm-4 list-head">LOCATION</span><span class="col-xs-12 col-sm-8">Germany, NRW
+              <span class="col-mobile-12 col-4 list-head">LOCATION</span><span class="col-mobile-12 col-8">Germany, NRW</span>
             </li>
             <li>
-              <span class="col-xs-12 col-sm-4 list-head">E-MAIL</span><span class="col-xs-12 col-sm-8"><script>decodeEmail()</script></span>
+              <span class="col-mobile-12 col-4 list-head">E-MAIL</span><span class="col-mobile-12 col-8"><script>decodeEmail()</script></span>
             </li>
             <li>
-              <span class="col-xs-12 col-sm-4 list-head">PHONE</span><span class="col-xs-12 col-sm-8">On request</span>
+              <span class="col-mobile-12 col-4 list-head">PHONE</span><span class="col-mobile-12 col-8">On request</span>
             </li>
           </ul>
         </div>
@@ -88,7 +87,7 @@
       </article>
 
       <div class="caption">
-        <div class="col-sm-offset-2 col-sm-8">
+        <div class="col-offset-2 col-8">
             <div>
               Resume
             </div>
@@ -99,7 +98,7 @@
       </div>
 
       <article id="education">
-        <div class="section col-sm-offset-2 col-sm-8">
+        <div class="section col-offset-2 col-8">
           <div class="sectionHeader">
             EDUCATION
           </div>
@@ -135,7 +134,7 @@
       </article>
 
       <article id="experience">
-        <div class="section col-sm-offset-2 col-sm-8">
+        <div class="section col-offset-2 col-8">
           <div class="sectionHeader">
             EXPERIENCE
           </div>
@@ -179,7 +178,7 @@
         </div>
       </article>
       <article id="skills">
-        <div class="section col-sm-offset-2 col-sm-8">
+        <div class="section col-offset-2 col-8">
           <div class="sectionHeader">
             SKILLS
           </div>
@@ -190,7 +189,7 @@
             Everyone has their own style, but a look left and right - be it only to evaluate or discuss - never hurts.
           </div>
           <div id="skillCircles">
-            <div class="col-md-4 col-sm-6 col-xs-12 skillCircle">
+            <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
                   PHP
               </div>
@@ -198,7 +197,7 @@
                   <svg><path id="circle1_bg" /><path id="circle1" /></svg>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 skillCircle">
+            <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
                   JavaScript
               </div>
@@ -206,7 +205,7 @@
                   <svg><path id="circle2_bg" /><path id="circle2" /></svg>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 skillCircle">
+            <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
                   Java
               </div>
@@ -214,7 +213,7 @@
                   <svg><path id="circle3_bg" /><path id="circle3" /></svg>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 skillCircle">
+            <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
                   SQL
               </div>
@@ -222,7 +221,7 @@
                   <svg><path id="circle4_bg" /><path id="circle4" /></svg>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 skillCircle">
+            <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
                   Python
               </div>
@@ -230,7 +229,7 @@
                   <svg><path id="circle5_bg" /><path id="circle5" /></svg>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12 skillCircle">
+            <div class="col-md-4 col-6 col-mobile-12 skillCircle">
               <div class="skillName">
                   Design
               </div>
@@ -243,7 +242,7 @@
       </article>
 
       <div id="contact" class="caption">
-        <div class="col-sm-offset-2 col-sm-8">
+        <div class="col-offset-2 col-8">
             <div>
               Contact
             </div>
@@ -254,31 +253,31 @@
       </div>
 
       <article id="emailform">
-        <div class="section col-sm-offset-2 col-sm-8">
+        <div class="section col-offset-2 col-8">
           <div class="sectionHeader">
             USING THIS FORM
           </div>
           <div class="spacer"></div>
 
-          <div id="form" class="form">
-            <div class="col-xs-6 inputWithLabel">
+          <div id="form" class="form col-12">
+            <div class="col-6 inputWithLabel">
               <label for="formName"></label>
               <input id="formName" type="text" placeholder="*">
             </div>
-            <div class="col-xs-6 inputWithLabel">
+            <div class="col-6 inputWithLabel">
               <label for="formEmail"></label>
               <input id="formEmail" type="text" placeholder="*">
             </div>
-            <div class="col-xs-12 inputWithLabel">
+            <div class="col-12 inputWithLabel">
               <label for="formMsg"></label>
               <textarea id="formMsg" class="textarea" contenteditable="true" placeholder="*"></textarea>
             </div>
-            <div class="col-xs-12">
-              <div class="col-xs-12 bg-danger">
+            <div class="col-12">
+              <div class="col-12 bg-danger">
                 <span class="material-icons">warning</span>
                 <span id="warn-text">Please make sure you entered your name, your email and left a message.</span>
               </div>
-              <div class="col-xs-12 bg-success">
+              <div class="col-12 bg-success">
                 <span class="material-icons">check_circle</span>
                 <span id="success-text">E-Mail sent successfully.</span>
               </div>
@@ -289,7 +288,7 @@
       </article>
 
       <article id="emaildirect">
-        <div class="section col-sm-offset-2 col-sm-8">
+        <div class="section col-offset-2 col-8">
           <div class="sectionHeader">
             OR DIRECT EMAIL
           </div>
