--- a/templates/index.html
+++ b/templates/index.html
@@ -8,21 +8,6 @@
     <link rel="stylesheet" href="{{ static_url('css/style.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/extras.css') }}" />
     <style>
-      #headerImage {
-        background-image: url("{{ static_url('img/keyboard-compressed.jpg') }}");
-      }
-
-      #footerImage {
-        background-image: url("{{ static_url('img/keyboard-compressed.jpg') }}");
-      }
-
-      .caption {
-          background-image: url("{{ static_url('img/photo-spacer-compressed.jpg') }} ");
-      }
-
-      #contact.caption {
-          background-image: url("{{ static_url('img/mail-compressed.jpg') }}");
-      }
 
     </style>
     <script>
@@ -46,7 +31,7 @@
       <div id="pictureMe"></div>
     </div>
     <div id="content">
-      <article id="about" class="col-offset-2 col-8">
+      <article id="about" class="col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
         <div class="welcomeBanner">WELCOME</div>
         <div class="intro">
           <span class="light">I'm</span> <span class="bold">Björn Friedrichs</span>
@@ -87,7 +72,7 @@
       </article>
 
       <div class="caption">
-        <div class="col-offset-2 col-8">
+        <div class="col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
             <div>
               Resume
             </div>
@@ -98,7 +83,7 @@
       </div>
 
       <article id="education">
-        <div class="section col-offset-2 col-8">
+        <div class="section col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
           <div class="sectionHeader">
             EDUCATION
           </div>
@@ -134,7 +119,7 @@
       </article>
 
       <article id="experience">
-        <div class="section col-offset-2 col-8">
+        <div class="section col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
           <div class="sectionHeader">
             EXPERIENCE
           </div>
@@ -178,7 +163,7 @@
         </div>
       </article>
       <article id="skills">
-        <div class="section col-offset-2 col-8">
+        <div class="section col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
           <div class="sectionHeader">
             SKILLS
           </div>
@@ -242,7 +227,7 @@
       </article>
 
       <div id="contact" class="caption">
-        <div class="col-offset-2 col-8">
+        <div class="col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
             <div>
               Contact
             </div>
@@ -253,7 +238,7 @@
       </div>
 
       <article id="emailform">
-        <div class="section col-offset-2 col-8">
+        <div class="section col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
           <div class="sectionHeader">
             USING THIS FORM
           </div>
@@ -288,7 +273,7 @@
       </article>
 
       <article id="emaildirect">
-        <div class="section col-offset-2 col-8">
+        <div class="section col-offset-mobile-1 col-mobile-10 col-offset-2 col-8">
           <div class="sectionHeader">
             OR DIRECT EMAIL
           </div>
