ict -> computer science

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="{{ static_url('css/material-icons.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/style.css') }}" />
     <link rel="stylesheet" href="{{ static_url('css/extras.css') }}" />
-    <style>
-
-    </style>
+    <title>Björn Friedrichs - Computer science student and developer</title>
     <script>
       function decodeEmail() {
         var e = ['bjo', 'ern@frie', 'drichs1.de'];
@@ -36,7 +34,7 @@
         <div class="intro">
           <span class="light">I'm</span> <span class="bold">Björn Friedrichs</span>
           <p class="light">
-            ICT Student and developer
+            Computer science student and developer
           </p>
         </div>
         <div class="spacer"></div>
@@ -57,7 +55,7 @@
           </ul>
         </div>
         <div class="welcomeText">
-          I'm Björn Friedrichs, ICT Student at the University of Duisburg-Essen
+          I'm Björn Friedrichs, computer science student at the University of Duisburg-Essen
           and currently employed as a front-end developer.
           Well-versed in numerous programming languages including JavaScript, SQL, and PHP.
         </div>
@@ -98,7 +96,7 @@
               </div>
               <div class="entryContent">
                 First year of G8 students (twelve instead of thirteen years of school),
-                schools werent completely adapted yet which caused a bit of trouble in the early years.
+                schools weren't completely adapted yet which caused a bit of trouble in the early years.
                 Taking maths and computer science as advanced courses was an easy choice and made the rest more bearable.
               </div>
             </li>
